@startuml

title __CONSTRAINT's Class Diagram__\n

  package taskman {
    package taskman.backend {
      package taskman.backend.constraint {
        enum AmountComparator {
          EQUALS
          NOT_EQUALS
          GREATER_THAN
          GREATER_THAN_OR_EQUALS
          SMALLER_THAN
          SMALLER_THAN_OR_EQUALS
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.constraint {
        class AndConstraint {
            + AndConstraint()
            + getConstraint1()
            - setConstraint1()
            + getConstraint2()
            - setConstraint2()
            + solution()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.constraint {
        class Constraint {
            - amount : int
            + Constraint()
            + getResourceType()
            - setResourceType()
            + getAmountComparator()
            - setAmountComparator()
            + getAmount()
            - setAmount()
            + solution()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.constraint {
        interface ConstraintComponent {
            {abstract} + solution()
            {static} + parseConstraint()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.constraint {
        class IfThenConstraint {
            + IfThenConstraint()
            + getIfConstraint()
            - setIfConstraint()
            + getThenConstraint()
            - setThenConstraint()
            + solution()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.constraint {
        class NotConstraint {
            + NotConstraint()
            + getConstraint()
            - setConstraint()
            + solution()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.constraint {
        class OrConstraint {
            + OrConstraint()
            + getConstraint1()
            - setConstraint1()
            + getConstraint2()
            - setConstraint2()
            + solution()
        }
      }
    }
  }
  

  AndConstraint -up-|> ConstraintComponent
  AndConstraint o-- ConstraintComponent : constraint1
  AndConstraint o-- ConstraintComponent : constraint2
  Constraint -up-|> ConstraintComponent
  Constraint o-- ResourceType : resourceType
  Constraint o-- AmountComparator : amountComparator
  IfThenConstraint -up-|> ConstraintComponent
  IfThenConstraint o-- ConstraintComponent : ifConstraint
  IfThenConstraint o-- ConstraintComponent : thenConstraint
  NotConstraint -up-|> ConstraintComponent
  NotConstraint o-- ConstraintComponent : constraint
  OrConstraint -up-|> ConstraintComponent
  OrConstraint o-- ConstraintComponent : constraint1
  OrConstraint o-- ConstraintComponent : constraint2


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
